Fix suggestions overflow on credits, added 127.0.0.1

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -784,6 +784,7 @@
 	pointer-events: none;
 	font-family: var(--font-family);
 	font-weight: var(--font-weight);
+	z-index: -1;
 
 	&.shown {
 		opacity: 1;
